Bugfix: prevent content not having 100% width on mobile

--- a/src/containers/_tabNavigation.scss
+++ b/src/containers/_tabNavigation.scss
@@ -3,6 +3,7 @@
   background-color: $green--light;
   padding: 0 10px;
   margin-bottom: 15px;
+  box-sizing: border-box;
 }
 
 button.tabmenu__button {
